<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Downloader</string>
    <string name="hint_url">Вставте посилання на відео…</string>
    <string name="btn_paste">Вставити</string>
    <string name="btn_download">⬇  ЗАВАНТАЖИТИ</string>
    <string name="btn_stop">⏹  СТОП</string>
    <string name="tab_download">⬇ Завантажити</string>
    <string name="tab_history">📋 Історія</string>
    <string name="platforms">YouTube • TikTok • Instagram • Twitter/X • Twitch • SoundCloud • Vimeo • Facebook</string>
    <string name="settings_title">Налаштування</string>
    <string name="settings_theme">Тема</string>
    <string name="settings_theme_system">Системна</string>
    <string name="settings_theme_light">Світла</string>
    <string name="settings_theme_dark">Темна</string>
    <string name="settings_language">Мова</string>
    <string name="settings_lang_uk">Українська</string>
    <string name="settings_lang_en">English</string>
    <string name="settings_background">Фонове завантаження</string>
    <string name="settings_background_desc">Продовжувати завантаження при згортанні</string>
    <string name="clipboard_empty">Буфер не містить посилань</string>
    <string name="confirm_clear_title">Очистити історію</string>
    <string name="confirm_clear_msg">Видалити всі записи з історії?</string>
    <string name="confirm_clear_yes">Видалити</string>
    <string name="confirm_clear_no">Скасувати</string>
    <string name="downloading_notification">Завантажую…</string>
    <string name="download_cancelled">Завантаження скасовано</string>
    <string name="channel_name">Завантаження</string>
</resources>
